@@ -215,7 +215,6 @@ my $extended_requires = {
                 'Moose::Meta::Class'              => 0,
                 'Moose::Role'                     => '0.93',
                 'Moose::Util::TypeConstraints'    => 0,
-                'MooseX::Aliases'                 => 0,
                 'MooseX::AttributeCloner'         => 0,
                 'MooseX::AttributeHelpers'        => 0,
                 'MooseX::ClassAttribute'          => 0,
@@ -238,6 +237,8 @@ my $extended_requires = {
                 'npg_common::sequence::reference::base_count' => 0,
                 'npg_testing::db'                          => 0,
                 'npg_tracking::data::reference::list'      => 0,
+                'npg_tracking::data::bait::find'           => 0,
+                'npg_tracking::data::snv::find'            => 0,
                 'npg_tracking::glossary::tag'              => 0,
                 'npg_tracking::illumina::run::folder'      => 0,
                 'npg_tracking::illumina::run::short_info'  => 0,
