@@ -1,13 +1,5 @@
-#########
-# Author:        Aylwyn Scally
-# Created:       2008-11-26
-#
-#
-
 package npg_qc::autoqc::checks::gc_bias;
 
-use strict;
-use warnings;
 use Moose;
 use namespace::autoclean;
 use Carp;
@@ -40,8 +32,8 @@ Readonly::Scalar my $SIG_PIPE_FATAL_ERROR       => 141;
 Readonly::Scalar our $EXT                => 'bam';
 
 
-has '+input_file_ext' => (default    => $EXT,);
-has '+aligner'        => (default    => q[fasta],);
+has '+file_type' => (default    => $EXT,);
+has '+aligner'   => (default    => q[fasta],);
 
 has 'window_depth_cmd'  =>  ( is         => 'ro',
                               isa        => 'NpgCommonResolvedPathExecutable',
@@ -373,11 +365,11 @@ npg_qc::autoqc::checks::gc_bias - assess the degree of gc_bias in reads
 
 =head1 AUTHOR
 
-    John O'Brien, jo3
+John O'Brien, jo3
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 GRL, by John O'Brien
+Copyright (C) 2015 GRL
 
 This file is part of NPG.
 
