@@ -1,12 +1,5 @@
-#########
-# Author:        Marina Gourtovaia mg8@sanger.ac.uk
-# Created:       3 February 2010
-#
-
 package npg_qc::autoqc::checks::gc_fraction;
 
-use strict;
-use warnings;
 use Moose;
 use namespace::autoclean;
 use Carp;
@@ -79,7 +72,7 @@ has 'ref_base_count_path' => (isa         => 'Maybe[Str]',
                               lazy_build  => 1,
                              );
 
-has '+input_file_ext' => (default    => $EXT,);
+has '+file_type' => (default    => $EXT,);
 
 sub _build_ref_base_count_path {
     my $self = shift;
@@ -236,11 +229,11 @@ __END__
 
 =head1 AUTHOR
 
-Author: Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
+Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 GRL, by Marina Gourtovaia
+Copyright (C) 2015 GRL
 
 This file is part of NPG.
 
