@@ -1,20 +1,11 @@
-# Author:        Jennifer Liddle
-# Created:       2014-02-06
-#
-#
-
 package npg_qc::autoqc::checks::verify_bam_id;
 
-use strict;
-use warnings;
 use Moose;
 use namespace::autoclean;
 use Carp;
 use File::Basename;
-use Data::Dumper;
 use npg_qc::autoqc::types;
 use Readonly;
-use FindBin qw($Bin);
 
 extends qw(npg_qc::autoqc::checks::check);
 with qw(npg_common::roles::software_location
@@ -28,7 +19,7 @@ Readonly::Scalar my $MIN_SNPS => 10**4;
 Readonly::Scalar my $MIN_AVG_DEPTH => 4;
 Readonly::Scalar my $MIN_FREEMIX => 0.05;
 
-has '+input_file_ext' => (default => $EXT,);
+has '+file_type' => (default => $EXT,);
 
 has 'alignments_in_bam'  => (
 	is => 'ro',
@@ -175,7 +166,19 @@ npg_qc::autoqc::checks::verify_bam_id - compare genotype from bam with Sequenom 
 
 =over
 
+=item Moose
+
+=item Carp
+
+=item File::Basename
+
 =item namespace::autoclean
+
+=item Readonly
+
+=item npg_common::roles::software_location
+
+=item npg_tracking::data::snv::find
 
 =back
 
@@ -185,7 +188,7 @@ npg_qc::autoqc::checks::verify_bam_id - compare genotype from bam with Sequenom 
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2014 GRL, by Jennifer Liddle
+Copyright (C) 2015 GRL
 
 This file is part of NPG.
 
