@@ -1,6 +1,9 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - autoqc check and autoqc objects: remove unused 'sequence_type' attribute
+ - refactor autoqc check to use file_type attribute name instead of
+     input_file_ext
+ - tags_reporters check - remove hardcoded solexa path
 
 release 58.9
  - move method for file name creation from SeqQC to autoqc so that it's
